<resources>
    <string name="app_name">MyFitnessNote</string>
    <string name="profile">Profile</string>
    <string name="user_id">User ID</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="please_click_again">Please click again</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="description">Description</string>
    <string name="gymworkout" />
    <string name="homeworkout" />
    <string name="workout_choice" />
    <string name="massages">Massages</string>
    <string name="enter_message">Type a message</string>
    <string name="button">Button</string>
    <string name="back">BACK</string>
    <string name="gymwork1">Gym</string>
    <string name="homeworkout1">Home</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="full_name">Full name</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="username">Username</string>
    <string name="change_email_or_password">Change Email Or Password</string>
    <string name="current_password">Current Password</string>
    <string name="save">Save</string>
    <string name="BtnBackNew">Back</string>
    <string name="_4">4</string>
    <string name="repeat">Max repeat</string>
    <string name="_2">2</string>
    <string name="weight">Max weight</string>
    <string name="workout_choice1">Workout Choice</string>
    <string name="sets">Max sets</string>
    <string name="_0">0</string>
    <string name="kg">Kg</string>
    <string name="Break">Max break</string>
    <string name="min">min</string>
    <string name="new_training">New Training</string>
    <string name="mo">MO</string>
    <string name="your_chats">Your chats</string>
    <string name="messages">Messages</string>
    <string name="more">More</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="log_out">Log out</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="change_email">Change Email</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Retype password</string>
    <string name="retype_password">Retype password</string>
    <string name="hi_how_are_you">Hi, How are you?</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="my_fitness_note">My Fitness Note</string>
    <string name="your_workouts">Your workouts</string>
    <string name="Settings">Settings</string>
    <string name="today">Today</string>
    <string name="no_trainings_for_today_available">No trainings for today available</string>
    <string name="date">Date</string>
    <string name="muscle">Max muscle:</string>
    <string name="sets_">Max sets:</string>
    <string name="weight_">Weight:</string>
    <string name="breaktime">Break Time:</string>
    <string name="repeat_">Repeat:</string>
    <string name="triceps">TRICEPS</string>
    <string name="forearms">FOREARMS</string>
    <string name="traps">TRAPS</string>
    <string name="upperabs">UPPER ABS</string>
    <string name="lowerabs">LOWER ABS</string>
    <string name="shoulder">SHOULDER</string>
    <string name="biceps">BICEPS</string>
    <string name="chest">CHEST</string>
    <string name="muscle_group">Muscle Group</string>
    <string name="progress">Progress</string>
    <string name="hi_max_how_are_you_doing">Hi Max How are you doing?</string>
    <string name="no_boards_are_available">no boards are available</string>
    <string name="your_name">Your Name</string>
    <string name="welcome">Welcome</string>
    <string name="add_member">add_member</string>
    <string name="members">members</string>
    <string name="todo">TODO</string>
    <string name="type_a_message">Type a message</string>
    <string name="trainings">Trainings</string>
    <string name="Leg_presses">Leg presses</string>
    <string name="Seated_rows">Seated rows</string>
    <string name="Leg_extensions">Leg extensions</string>
    <string name="Seated_biceps_curls">Seated biceps curls</string>
    <string name="test">Test</string>
    <string name="_1m">1M</string>
    <string name="_2m">2m</string>
    <string name="_3m">3m</string>
    <string name="_6m">6m</string>
    <string name="_1w">1W</string>
    <string name="setting">Setting</string>
    <string name="my_profile">My profile</string>
    <string name="x">X</string>
    <string name="abs">ABS</string>
    <string name="name">Name</string>
    <string name="_2w">2W</string>
    <string name="_3w">3W</string>
    <string name="all">All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_height">Your height</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="your_weight">Your weight</string>
    <string name="height">Height</string>
    <string name="your_age">Your age</string>
    <string name="tipps">Tipps</string>
    <string name="Update">Update</string>
    <string name="Add">Add</string>
    <string name="Pause">Pause</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="leg">LEG</string>
    <string name="this_is_a_custom_toast_plaase_check_your_email_to_verfiy">This is a custom Toast plaase check your email to verfiy</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="note">Note:</string>
    <string name="info">Info</string>
    <string name="finish">finish</string>
    <string name="workout">Workout</string>
    <string name="cm">cm</string>
    <string name="change_password">Change password</string>
    <string name="gymorhome">GymOrHome</string>
    <string name="workoutname">Workoutname</string>
    <string name="dumbbell_curl">Dumbbell curl</string>
    <string name="one_arm_dumbbell">One arm dumbbell</string>
    <string name="ez_bar_curl">EZ Bar curl</string>
    <string name="training_tips">Training tips</string>
</resources>
