<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myfitneesnote.IntroActivity">
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/intro_imageView"
            android:layout_width="354dp"
            android:layout_height="262dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo1"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="39dp" />

        <TextView
            android:id="@+id/intro_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="Welcome"
            android:textColor="#000000"
            android:textSize="50sp"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="218dp" />


        <Button
            android:id="@+id/intro_login_button"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape"
            android:text="@string/login"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="508dp" />

        <Button
            android:id="@+id/intro_sign_up_button"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape3"
            android:text="@string/sign_up"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="508dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>