<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp"
    android:background="?attr/selectableItemBackground"
    android:backgroundTint="@color/backgroundColorNav"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_GymName"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/textColor"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_GymName"
            app:layout_constraintVertical_bias="0.217"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:layout_marginStart="16dp"
            android:gravity="bottom|center"
            android:text="@string/date"
            android:textColor="@color/textColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.388"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/workout_image"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="bottom"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.177"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/muscle"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/sets_"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/weight_"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/breaktime"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/repeat_"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/workout_image"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/tv_Muscle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/tv_Sets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/tv_break"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/tv_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <ImageView
            android:id="@+id/workout_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>