<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:fitsSystemWindows="true"
    android:background="@drawable/back7"
    tools:context="com.example.myfitneesnote.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar_sign_up_activity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/toolBar_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="218dp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar_sign_up_activity" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="360dp"
        android:layout_height="410dp"
        android:layout_marginBottom="88dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/sigUp_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputname"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:textColorHint="#8D8D8E"
                app:boxStrokeColor="#0287FB">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="300"
                    android:background="@android:color/transparent"
                    android:hint="@string/full_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputusername"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:textColorHint="#8D8D8E"
                app:boxStrokeColor="#0287FB">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpUsernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="300"
                    android:background="@android:color/transparent"
                    android:hint="@string/username"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:textColorHint="#8D8D8E"
                app:boxStrokeColor="#0287FB">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="300"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputpassword"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:textColorHint="#8D8D8E"
                app:boxStrokeColor="#0287FB">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="300"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputpassword2"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="#8D8D8E"
                app:boxStrokeColor="#0287FB">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_password_input2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="300"
                    android:background="@android:color/transparent"
                    android:hint="@string/retype_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sigUp_button"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="-50dp"
        android:layout_weight="300"
        android:backgroundTint="@color/colorPrimaryBlue"
        android:text="@string/sign_up"
        app:cornerRadius="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/signUp_loginText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signUp_loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/have_an_account"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>