<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:gravity="center"
    tools:context=".workout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar_workout_activity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="MissingConstraints">
                <TextView
                    android:id="@+id/toolBar_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="165dp"
                    tools:layout_editor_absoluteY="218dp" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="400dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/shapetransparent_message"
                    android:gravity="center"
                    android:text="@string/workout_choice1"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_gym_home"
                    android:layout_width="380dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_gym_out"
                    android:text="@string/gymwork1"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="380dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/imageedit_5_6040594024"
                    android:text="@string/homeworkout1"
                    android:textColor="@android:color/background_light" />


                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="400dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/shape"
                    android:text="@string/back1" />
        </LinearLayout>


</RelativeLayout>